--- a/foundry.toml
+++ b/foundry.toml
@@ -14,6 +14,7 @@ cbor_metadata = true
 extra_output = ["devdoc", "userdoc", "metadata", "storageLayout"]
 
 fs_permissions = [
+  { "access" = "read-write", "path" = "./cache"},
   { "access" = "read-write", "path" = "./script/output/"},
   { "access" = "read-write", "path" = "./deployments/" },
   { "access" = "read", "path" = "./script/input/"},
